--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
                     <div class = "dropdown">
                         <button class = "dropbtn">
                             <div class = "icon">
-                                <i class="fa-solid fa-circle-user"></i>
+                                <img src = "<%=userID.photo%>" alt = "">
                             </div>
                         </button>
                         <div class = "dropdown-content">
@@ -37,8 +37,6 @@
                             <form id="logout-form" action="/logout" method="POST" style="display: none;"></form>
                         </div>
                     </div>
-
-                
             <% } %>
         </ul>
     </div>
