--- a/views/viewPost.ejs
+++ b/views/viewPost.ejs
@@ -38,7 +38,7 @@
                 <% } %>
                 <button for = "viewAccount">
                     <div class = "profile-picture">
-                        <img src="assets/tyler.jpg" alt="">
+                        <img src="" alt="">
                     </div>
                 </button>
               <div class = "post-header-content">
