--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -24,12 +24,20 @@
                 <span class = "tooltiptext">Login</span>
             </div>
         <% } else { %>
-            <div class = "tooltip">
-                <a href = "/account/<%=userID._id%>" id="account"><i class="fa-solid fa-circle-user"></i></a>
-                <span class = "tooltiptext">Account</span>
+            <div class = "dropdown">
+                <button class = "dropbtn">
+                    <div class = "icon">
+                        <img src = "<%=userID.photo%>" alt = "">
+                    </div>
+                </button>
+                <div class = "dropdown-content">
+                    <a href = "/account/<%=userID._id%>" method="GET" id="account">Account</a>
+                    <a href = "/settings/<%=userID._id%>" method="GET" id="settings">Settings</a>
+                    <a href = "/logout" method="POST" id="logout" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">Log out</a>
+                    
+                    <form id="logout-form" action="/logout" method="POST" style="display: none;"></form>
+                </div>
             </div>
-            <form id = "logout" method="post" action="/logout">
-                <button type="submit">LOGOUT</button>
         <% } %>
         </form>
     </ul>
