--- a/views/viewAllPosts.ejs
+++ b/views/viewAllPosts.ejs
@@ -20,28 +20,57 @@
 <div class = "main-container">
     <div class = "post-container">
         <% posts.forEach(function(post){ %>
-        <div class = "post" style="width:100%">
-            <div class = "post-header">
-                <div class = "post-content">
-                    <div class = "post-header-upper">
-                        <div class="profile-picture">
-                            <i class="fa-solid fa-circle-user"></i>
+            <div class = "post">
+                <form>
+                    <button>
+                    <div class = "view-post">
+                      <div class = "post-header">
+                        <div class = "profile-picture">
+                          <img src="<%=post.photo%>" alt="">
                         </div>
-                        <h3><%=post.username%></h3>
-                        <p class = "carInformation"><%=post.carModel%>,<%=post.carTitle%></p>
+        
+                        <div class = "post-header-content">
+                          <div class = "stack">
+                            <div class = "profile-name">
+                              <h5><%=post.username%></h5>
+                            </div>
+                            <div class = "post-information">
+                              <p>- <%=post.carModel%>, <%=post.carTitle%></p>
+                            </div>
+                          </div>
+                          <div class = "stack">
+                              <div class = "description">
+                                <p><%=post.description%></p>
+                              </div>
+                          </div>
+                        </div>
+                        <div class = "post-date">
+                          <p><%=post.date%></p>
+                        </div>
+                      </div>
+                        <div class = "image-container">
+                          <img src="<%=post.photo%>" alt="">
+                        </div>
                     </div>
-                    <div class = "post-header-lower">
-                        <p><%=post.description%></p>
+                    </button>
+                    </form>
+                  <div class = "extras-content">
+                    <div class = "item" id = "item">
+                      <input class = "like-button" id = "like-button" type = "checkbox"></input>
+                        <label for = "like-button">
+                          <i class="fas fa-heart"></i>
+                          <p><%=post.likes%></p>
+                        </label>
                     </div>
-                </div>
-                <div class = "post-date">
-                    <p><%=post.date%></p>
-                </div>
-            </div>
-            <div class = "post-image">
-                <img src = <%=post.photo%> alt = "Pagani Zonda F">
-            </div>
-        </div>
+                    <div class = "item" id = "item">
+                      <input class = "favourite-button" id = "favourite-button" type = "checkbox"></input>
+                        <label for = "favourite-button">
+                          <i class="fas fa-star"></i>
+                          <p>3</p>
+                        </label>
+                      </div>
+                  </div>
+              </div>
         <% }) %>
     </div>
 </div>
