added liking posts, small bug with it though

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,10 @@
         </ul> 
     </div>
 
-    <script src = "/javascript/script.js"></script>
+    <script src="/javascript/script.js"></script>
+    <script>
+        var userID = '<%- JSON.stringify(userID) %>';
+    </script>
     <script>
         var screenWidth = window.innerWidth;
         if (screenWidth < 768) {
