--- a/views/viewPost.ejs
+++ b/views/viewPost.ejs
@@ -55,7 +55,7 @@
                           <p><%=post.date%></p>
                         </div>
                       </div>
-                        <div class = "image-container">
+                        <div class = "image-container" style="max-height:75vh">
                           <img src="<%=post.photo%>" alt="">
                         </div>
                     </div>
