--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,9 +18,11 @@
 
         <ul>
             <% if (!userID) { %>
-                <div class = "tooltip">
-                    <a href = "login" id="login"><i class="fa-solid fa-circle-user"></i></a>
-                    <span class = "tooltiptext">Login</span>
+                <div class = "default-icon">
+                    <div class = "tooltip">
+                            <a href = "login" id="login"><i class="fa-solid fa-circle-user"></i></a>
+                        <span class = "tooltiptext">Login</span>
+                    </div>
                 </div>
             <% } else { %>
                     <div class = "dropdown">
